[package]
name = "redisclone"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
log = "0.4.29"
log4rs = "1.4.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
